--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="title">
+            <img src="./img/Logo.png" alt="logo-boolean">
+            <strong class="text-title">Toboolist</strong>
+        </div>
+
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
