add task and section

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
             <img src="./img/Logo.png" alt="logo-boolean">
             <strong class="text-title">Toboolist</strong>
         </div>
-
     </header>
-    <main></main>
+    <main>
+        <section class="page">
+            <div class="case">
+                <div class="add-task">Add task</div>
+                <div class="add-section">Add section</div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
