add horizontal line

--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
     <main>
         <section class="page">
             <div class="case">
-                <div class="add-task">Add task</div>
-                <div class="add-section">Add section</div>
+                <div class="add-task">
+                    <span>Add task</span>
+                </div>
+                <div class="add-section">
+                    <span>Add section</span>
+                </div>
+                <hr>
             </div>
         </section>
     </main>
