--- a/index.html
+++ b/index.html
@@ -22,8 +22,67 @@
                 <div class="add-section">
                     <span>Add section</span>
                 </div>
-                <hr>
             </div>
+            <div class="case-2">
+                <section>
+                    <h3>&#9207; New Task</h3>
+                    <span>
+                        &#10004; Quarterly Newsletter
+                    </span>
+                    <span class="button-editorial">Editoral</span>
+
+                    <h3>&#9207; Today</h3>
+                    <span>
+                        &#10004; Recruiting blog post
+                    </span>
+                    <span class="button-editorial">Editoral</span>
+                    <br> 
+                    <br>
+                    <span>
+                        &#10004; Mobile app luaunch
+                    </span>
+                    <span class="button-goals">Q1 Goals</span>
+                    <br> 
+                    <br>
+                    <span>
+                        &#10006; Interview John H.
+                    </span>
+                    <span class="button-recruiting">
+                        Recruiting
+                    </span>
+                    <br> 
+                    <br>
+                    <span>
+                        &#10004; Summit update to mobile store fronts
+                    </span>
+                    <span class="button-mobile">Mobile</span>
+                    <h3>&#9207; Upcoming</h3>
+                    <span>
+                        &#10006; Schedule meeting with Alex
+                    </span>
+                    <br> 
+                    <br>
+                    <span>
+                        &#10004; Homepage refresh
+                    </span>
+                    <span class="button-website">Website</span>
+                    <br> 
+                    <br>
+                    <span>
+                        &#10004; Onboard new Sales team members
+                    </span>
+                    <span class="button-sales">
+                        Sales
+                    </span>
+                    <br> 
+                    <br>
+                    <span>
+                        &#10004; Review editorial calendar
+                    </span>
+                    <span class="button-editorial">Editorial</span>
+
+                </section>
+            </div>    
         </section>
     </main>
     <footer></footer>
