--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <header>
+        <!--Logo-->
         <div class="title">
             <img src="./img/Logo.png" alt="logo-boolean">
             <strong class="text-title">Toboolist</strong>
         </div>
     </header>
     <main>
+        <!--First box-->
         <section class="page">
             <div class="case">
                 <div class="add-task">
@@ -23,13 +25,16 @@
                     <span>Add section</span>
                 </div>
             </div>
+            <!--Second box-->
             <div class="case-2">
                 <section>
+                    <!--To do list-->
                     <h3>&#9207; New Task</h3>
                     <span>
                         &#10004; Quarterly Newsletter
                     </span>
                     <span class="button-editorial">Editoral</span>
+                    <!--/task-->
 
                     <h3>&#9207; Today</h3>
                     <span>
@@ -56,6 +61,8 @@
                         &#10004; Summit update to mobile store fronts
                     </span>
                     <span class="button-mobile">Mobile</span>
+                    <!--/today-->
+
                     <h3>&#9207; Upcoming</h3>
                     <span>
                         &#10006; Schedule meeting with Alex
@@ -80,7 +87,7 @@
                         &#10004; Review editorial calendar
                     </span>
                     <span class="button-editorial">Editorial</span>
-
+                    <!--/upboard-->
                 </section>
             </div>    
         </section>
