fixed header and first section

--- a/index.html
+++ b/index.html
@@ -7,90 +7,23 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
+    <header id="site-header">
         <!--Logo-->
-        <div class="title">
-            <img src="./img/Logo.png" alt="logo-boolean">
-            <strong class="text-title">Toboolist</strong>
-        </div>
+            <img id="logo" src="./img/Logo.png" alt="logo-boolean">
+            <strong id="text-logo">Toboolist</strong>
     </header>
     <main>
-        <!--First box-->
-        <section class="page">
+        <div class="page">
             <div class="case">
-                <div class="add-task">
-                    <span>Add task</span>
+                <div class="up">
+                    <button class="btn first-btn">Add Task</button>
+                    <button class="btn second-btn">Add Section</button>
                 </div>
-                <div class="add-section">
-                    <span>Add section</span>
+                <div class="down">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque iusto sit deleniti consequuntur a, incidunt quasi porro eligendi optio magnam delectus nobis cum, eos, sequi commodi in molestiae perspiciatis. Perspiciatis.</p>
                 </div>
             </div>
-            <!--Second box-->
-            <div class="case-2">
-                <section>
-                    <!--To do list-->
-                    <h3>&#9207; New Task</h3>
-                    <span>
-                        &#10004; Quarterly Newsletter
-                    </span>
-                    <span class="button-editorial">Editoral</span>
-                    <!--/task-->
-
-                    <h3>&#9207; Today</h3>
-                    <span>
-                        &#10004; Recruiting blog post
-                    </span>
-                    <span class="button-editorial">Editoral</span>
-                    <br> 
-                    <br>
-                    <span>
-                        &#10004; Mobile app luaunch
-                    </span>
-                    <span class="button-goals">Q1 Goals</span>
-                    <br> 
-                    <br>
-                    <span>
-                        &#10006; Interview John H.
-                    </span>
-                    <span class="button-recruiting">
-                        Recruiting
-                    </span>
-                    <br> 
-                    <br>
-                    <span>
-                        &#10004; Summit update to mobile store fronts
-                    </span>
-                    <span class="button-mobile">Mobile</span>
-                    <!--/today-->
-
-                    <h3>&#9207; Upcoming</h3>
-                    <span>
-                        &#10006; Schedule meeting with Alex
-                    </span>
-                    <br> 
-                    <br>
-                    <span>
-                        &#10004; Homepage refresh
-                    </span>
-                    <span class="button-website">Website</span>
-                    <br> 
-                    <br>
-                    <span>
-                        &#10004; Onboard new Sales team members
-                    </span>
-                    <span class="button-sales">
-                        Sales
-                    </span>
-                    <br> 
-                    <br>
-                    <span>
-                        &#10004; Review editorial calendar
-                    </span>
-                    <span class="button-editorial">Editorial</span>
-                    <!--/upboard-->
-                </section>
-            </div>    
-        </section>
+        </div>
     </main>
 </body>
 </html>
