--- a/index.html
+++ b/index.html
@@ -20,7 +20,72 @@
                     <button class="btn second-btn">Add Section</button>
                 </div>
                 <div class="down">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque iusto sit deleniti consequuntur a, incidunt quasi porro eligendi optio magnam delectus nobis cum, eos, sequi commodi in molestiae perspiciatis. Perspiciatis.</p>
+                   <details open>
+                        <summary>
+                            <strong>New Task</strong>
+                        </summary>
+                            <ul>
+                                <li>
+                                    <span class="circle circle-check">&checkmark;</span>
+                                    Quarterly Newsletter 
+                                    <span class="badge badge-editorial">Editorial</span>
+                                </li>
+                            </ul>
+                   </details>
+                    <details open>
+                        <summary>
+                            <strong>Today</strong>
+                        </summary>
+                        <ul>
+                            <li>
+                                <span class="circle circle-check">&checkmark;</span>
+                                Recruiting blog post 
+                                <span class="badge badge-editorial">Editorial</span>
+                            </li>
+                            <li>
+                                <span class="circle circle-check">&checkmark;</span>
+                                Mobile app lunch
+                                <span class="badge badge-goals">Q1 Goals</span>
+                            </li>
+                            <li>
+                                <span class="circle circle-delete">&times;</span>
+                                Interview John H.
+                                <span class="badge badge-recruiting">Recruiting</span>
+                            </li>
+                            <li>
+                                <span class="circle circle-check">&checkmark;</span>
+                                Summit update to mobile storefronts
+                                <span class="badge badge-mobile">Mobile</span>
+                            </li>
+                        </ul>
+                    </details>
+                    <details open>
+                        <summary>
+                            <strong>Upcoming</strong>
+                        </summary>
+                            <ul>
+                                <li>
+                                    <span class="circle circle-delete">&times;</span>
+                                    Schedule meeting with Alex
+                                </li>
+                                <li>
+                                    <span class="circle circle-check">&checkmark;</span>
+                                        Homepage refresh
+                                    <span class="badge badge-website">Website</span>
+                                </li>
+                                <li>
+                                    <span class="circle circle-check">&checkmark;</span>
+                                    Onboard new sales team members
+                                    <span class="badge badge-sales">Sales</span>
+                                </li>
+                                <li>
+                                    <span class="circle circle-check">&checkmark;</span>
+                                    Review editorial calendar
+                                    <span class="badge badge-editorial">Editorial</span>
+                                </li>
+                            </ul>
+                    </details>
+                    
                 </div>
             </div>
         </div>
